<resources>
    <string name="app_name">Directory</string>
    <string name="butst">Головна</string>
    <string name="butph">Фільми</string>
    <string name="batPh1">Більше</string>
    <string name="Biogr">Біографія</string>
    <string name="mainGol"><b>Художній фільм</b></string>
    <string name="mainGinfo">
        <b>Художній фільм</b> — вид кіномистецтва, побудований на грі акторів. До художніх фільмів належать майже всі твори кінематографа за винятком документального кіно.
Перші художні фільми почав знімати Жорж Мельєс 1896 року. В Україні перші фільми було показано глядацькій аудиторії 1896 року.</string>
    <string name="tJor"><b>Жо́рж Мельє́с</b> (фр. Maries-Georges-Jean Méliès; 8 грудня 1861 — 21 січня 1938) — французький підприємець, режисер, один з засновників світового кінематографа.</string>
    <string name="tJor2">Народився в Парижі в сім`ї промисловця, мав старшого брата — Гастона. Будучи забезпеченою людиною, Мельєс присвятив багато часу своїм захопленням, серед яких чільне місце займали театр та мистецтво сценічної ілюзії. Як ілюзіоніст він виступав у театрі «Робер-Уден», яким володів. В 1895 році він опинився на одному з перших кіносеансів братів Люм`єр й відразу ж став палким прихильником кінематографу. Не зумівши придбати в Люм`єрів сконструйовану ними камеру-проектор (він пропонував великі гроші, але Люм`єри відмовили, оскільки намагалися зберегти монополію на нову розвагу, вважаючи, що вона досить швидко вийде з моди й треба користатись цим по повній), Мельєс знайшов можливість придбати аналогічний апарат англійського виробництва й почав активно експериментувати.</string>
    <string name="tJor3">Мельєс намагався заробляти, продаючи кінотеатрам копії своїх фільмів, але найпотужніший ринок — американський — виявився для нього закритим, оскільки Томас Едісон вважав себе володарем всіх американських патентних прав на кінотехнології й вважав, що має право копіювати й продавати для показу будь-який зроблений без його санкції фільм, в тому числі й фільми Мельєса. В результаті Мельєс не отримав практично нічого за показ своїх фільмів в США й у 1914 році змушений був продати студію. Негативи своїх фільмів він у нападі люті спалив.
До 1909 року Мельєс мусив відмовитися від своєї самостійності й почав працювати для фірми «Брати Пате».</string>
    <string name="tJor4">Достовірно встановити кількість фільмів, знятих Жоржем Мельєсом, неможливо. Історики кіно називають різні цифри: так, Моріс Бессп, Жозеф-Марія Ло Дюк та Марсель Лапьєр називають цифру 4000, а Шарль Форд та Рене Жанн говорять про 1000 фільмів.
Жорж Садуль пояснює такі розбіжності в цифрах тим, що в каталозі своїх фільмів Мельєс давав окремий номер кожному відрізку плівки довжиною 20 метрів незалежно від того, чи є цей відрізок самостійним фільмом, чи ж лише його частиною.</string>

    <string name="nazv1">Додому</string>
    <string name="nazv2">Кіборги</string>
    <string name="nazv3">Атлантида</string>
    <string name="nazv4">Іван Сила</string>
    <string name="nazv5">Плем`я</string>

    <string name="dod1"><b>Режесер:</b>Алієв Наріман Рідьванович</string>
    <string name="dod2"><b>Продюсер:</b>Володимир Яценко</string>
    <string name="dod3"><b>Жанр:</b>драма, українське</string>
    <string name="dod4"><b>Тривалість:</b>96 хв.</string>

    <string name="kib1"><b>Режесер:</b>Ахтем Шевкетович Сеїтаблаєв</string>
    <string name="kib2"><b>Продюсер:</b>Іванна Дядюра</string>
    <string name="kib3"><b>Жанр:</b>екшн, військова драма</string>
    <string name="kib4"><b>Тривалість:</b>110 хв.</string>

    <string name="atl1"><b>Режесер:</b>Васянович Валентин Миколайович</string>
    <string name="atl2"><b>Продюсер:</b>Володимир Яценко</string>
    <string name="atl3"><b>Жанр:</b>драма, українське</string>
    <string name="atl4"><b>Тривалість:</b>106 хв.</string>

    <string name="ivn1"><b>Режесер:</b>Віктор Андрієнко</string>
    <string name="ivn2"><b>Продюсер:</b>Володимир Філіппов</string>
    <string name="ivn3"><b>Жанр:</b>пригодницький</string>
    <string name="inv4"><b>Тривалість:</b>89 хв.</string>

    <string name="ple1"><b>Режесер:</b>Алієв Наріман Рідьванович</string>
    <string name="ple2"><b>Продюсер:</b>Валентин Васянович</string>
    <string name="ple3"><b>Жанр:</b>кримінал драма</string>
    <string name="ple4"><b>Тривалість:</b>132 хв.</string>


    <string name="akt">Актори</string>


    <string name="vdod"><b>Дата першого показу:</b> 22 травня 2019р.</string>
    <string name="vdod1"><b>Режисер:</b> Алієв Наріман Рідьванович</string>
    <string name="vdod2"><b>Продюсер:</b> Володимир Яценко</string>
    <string name="vdod3"><b>Автор сценарію:</b> Алієв Наріман Рідьванович, Марися Нікітюк</string>
    <string name="vdod4"><b>Оператор:</b> Антон Фурса</string>
    <string name="vdod5"><b>Номінації:</b> Prize of Un Certain Regard</string>
    <string name="vdod6">
                <b>Історія кримськотатарської родини</b> — батька та його синів, загиблого і живого. Стрічка, яка не омине серце жодного глядача. Адже вона піднімає теми, які важливі для кожного українця.
            І це не лише війна на Сході, окупація Криму і доля кримськотатарського народу.Лейтмотивом фільму є взаємини батьків і дітей, а також пошук свого місця у світі.
            Міжнародна прем`єра картини відбулася у конкурсній програмі Особливий погляд Каннського кінофестивалю 2019, а на ОМКФ 2019 фільм отримав Гран-прі.</string>


    <string name="vkib1"><b>Дата першого показу:</b> 22 травня 2019р.</string>
    <string name="vkib2"><b>Режисер:</b> Алієв Наріман Рідьванович</string>
    <string name="vkib3"><b>Продюсер:</b> Володимир Яценко</string>
    <string name="vkib4"><b>Автор сценарію:</b> Алієв Наріман Рідьванович, Марися Нікітюк</string>
    <string name="vkib5"><b>Оператор:</b> Антон Фурса</string>
    <string name="vkib6"><b>Номінації:</b> Prize of Un Certain Regard</string>
    <string name="vkib7">
        Про історію, про подвиг, про самопожертву, про батьківщину. Саме цьому присвячений художній фільм режисера Ахтема Сеіаблаєва, який вийшов в кінопрокат ще у 2017 році. У стрічці мова йде про добровольців та військових, які 242 дні захищали Донецький аеропорт у вересні 2014 року. Українських захисників самі окупанти прозвали “кіборгами” за їх відвагу та сміливість. Це слово і стало назвою фільму. Сценарій до фільму був написаний на основі свідчень українських військових, які обороняли Донецький аеропорт. </string>


    <string name="vatl1"><b>Дата першого показу:</b> 22 травня 2019р.</string>
    <string name="vatl2"><b>Режисер:</b> Алієв Наріман Рідьванович</string>
    <string name="vatl3"><b>Продюсер:</b> Володимир Яценко</string>
    <string name="vatl4"><b>Автор сценарію:</b> Алієв Наріман Рідьванович, Марися Нікітюк</string>
    <string name="vatl5"><b>Оператор:</b> Антон Фурса</string>
    <string name="vatl6"><b>Номінації:</b> Prize of Un Certain Regard</string>
    <string name="vatl7">
        <b>Фільм-антиутопія “Атлантида”</b> Валентина Васяновича вийшов у світ у 2019 році. У цій стрічці немає жодного професійного актора. У зйомках брали участь колишній розвідник та волонтер благодійного фонду “Повернись живим” Андрій Римарук, парамедикиня Людмила Білека і доброволець Василь Антоняк. Фільм знімали в Києві та Маріуполі. </string>


    <string name="vivn1"><b>Дата першого показу:</b> 22 травня 2019р.</string>
    <string name="vivn2"><b>Режисер:</b> Алієв Наріман Рідьванович</string>
    <string name="vivn3"><b>Продюсер:</b> Володимир Яценко</string>
    <string name="vivn4"><b>Автор сценарію:</b> Алієв Наріман Рідьванович, Марися Нікітюк</string>
    <string name="vivn5"><b>Оператор:</b> Антон Фурса</string>
    <string name="vivn6"><b>Номінації:</b> Prize of Un Certain Regard</string>
    <string name="vivn7">
                Фільм Віктора Андрієнка розповідає історію життя Івана Фірцака, якого називали найсильнішою людиною 20 століття. Фільм позиціонується як дитячий, однак він буде цікавий для глядачів будь-якого віку. Головну роль зіграв український силач Дмитро Халаджі.</string>


    <string name="vple1"><b>Дата першого показу:</b> 22 травня 2019р.</string>
    <string name="vple2"><b>Режисер:</b> Алієв Наріман Рідьванович</string>
    <string name="vple3"><b>Продюсер:</b> Володимир Яценко</string>
    <string name="vple4"><b>Автор сценарію:</b> Алієв Наріман Рідьванович, Марися Нікітюк</string>
    <string name="vple5"><b>Оператор:</b> Антон Фурса</string>
    <string name="vple6"><b>Номінації:</b> Prize of Un Certain Regard</string>
    <string name="vple7">
                Персонажі фільму Мирослава Слабошпицького — підлітки із вадами слуху, які живуть у спеціалізованому інтернаті і переживають одні із найболючіших епізодів свого життя.
Це фільм, який змінив враження іноземців про українське кіно. Стрічка вийшла в прокат у десятках країн та була представлена на понад 100 кінофестивалях світу, де отримала понад 40 нагород, серед яких Європейський кіноприз і три призи Каннського кінофестивалю.
Рробота особлива тим, що вона стала першим фільмом у світі, знятим без єдиного слова — виключно українською мовою жестів, і при цьому не має субтитрів, інтертитрів чи закадрового голосу. Але, при цьому, глядач абсолютно чітко розуміє, що відбувається у кадрі.</string>


    <string name="vmist1"><n><b>Художній фільм</b> — вид кіномистецтва, побудований на грі акторів.</n>
        <n> До художніх фільмів належать майже всі твори кінематографа за винятком документального кіно.</n>
        <n> Перші художні фільми почав знімати Жорж Мельєс 1896 року. </n>
        <n> В Україні перші фільми було показано глядацькій аудиторії 1896 року.</n></string>


</resources>